unpackaged/main/default/objects/Lead/fields/Any_additional_information_you_would_lik__c.field-meta.xml
<CustomField>
    <fullName>Any_additional_information_you_would_lik__c</fullName>
    <label>Any additional information you would lik</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>