unpackaged/main/default/objects/Lead/fields/Are_you_an_existing_Absa_customer__c.field-meta.xml
<CustomField>
    <fullName>Are_you_an_existing_Absa_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you an existing Absa customer</label>
    <type>Checkbox</type>
</CustomField>