unpackaged/main/default/objects/Lead/fields/Ask_more_about_merchant_services__c.field-meta.xml
<CustomField>
    <fullName>Ask_more_about_merchant_services__c</fullName>
    <label>Ask more about merchant services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Point-of-Sale</fullName>
            </value>
            <value>
                <fullName>mPOS</fullName>
            </value>
            <value>
                <fullName>Integrated POS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>