unpackaged/main/default/objects/Lead/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Town__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bobonong</fullName>
            </value>
            <value>
                <fullName>Letlhakane</fullName>
            </value>
            <value>
                <fullName>Mahalapye</fullName>
            </value>
            <value>
                <fullName>Orapa</fullName>
            </value>
            <value>
                <fullName>Palapye</fullName>
            </value>
            <value>
                <fullName>Pilane</fullName>
            </value>
            <value>
                <fullName>Selibe Phikwe</fullName>
            </value>
            <value>
                <fullName>Serowe</fullName>
            </value>
            <value>
                <fullName>Francistown</fullName>
            </value>
            <value>
                <fullName>Blue Jacket</fullName>
            </value>
            <value>
                <fullName>Galo Prestige</fullName>
            </value>
            <value>
                <fullName>Carbo Prestige</fullName>
            </value>
            <value>
                <fullName>Personal Prestige</fullName>
            </value>
            <value>
                <fullName>Telesales</fullName>
            </value>
            <value>
                <fullName>Ghanzi</fullName>
            </value>
            <value>
                <fullName>Gumare</fullName>
            </value>
            <value>
                <fullName>Kasane</fullName>
            </value>
            <value>
                <fullName>Masunga</fullName>
            </value>
            <value>
                <fullName>Maun</fullName>
            </value>
            <value>
                <fullName>Nata</fullName>
            </value>
            <value>
                <fullName>Shakawe</fullName>
            </value>
            <value>
                <fullName>Tutume</fullName>
            </value>
            <value>
                <fullName>Airport Junction Premier</fullName>
            </value>
            <value>
                <fullName>Carbo Premier</fullName>
            </value>
            <value>
                <fullName>Francistown Premier</fullName>
            </value>
            <value>
                <fullName>Game City Premier</fullName>
            </value>
            <value>
                <fullName>Airport Junction</fullName>
            </value>
            <value>
                <fullName>Broadhurst</fullName>
            </value>
            <value>
                <fullName>Game City</fullName>
            </value>
            <value>
                <fullName>GIND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>