unpackaged/main/default/objects/Lead/fields/BranchNumber__c.field-meta.xml
<CustomField>
    <fullName>BranchNumber__c</fullName>
    <label>Branch Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>