unpackaged/main/default/objects/Lead/fields/Business_or_company_name__c.field-meta.xml
<CustomField>
    <fullName>Business_or_company_name__c</fullName>
    <label>Business or company name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>