unpackaged/main/default/objects/Lead/fields/Company_or_business_name__c.field-meta.xml
<CustomField>
    <fullName>Company_or_business_name__c</fullName>
    <label>Company or business name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>