unpackaged/main/default/objects/Lead/fields/CurrentLoanDisbursementDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentLoanDisbursementDate__c</fullName>
    <label>Current Loan Disbursement Date</label>
    <type>Date</type>
</CustomField>