unpackaged/main/default/objects/Lead/fields/CurrentLoanInstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentLoanInstallmentAmount__c</fullName>
    <label>Current Loan Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>