unpackaged/main/default/objects/Lead/fields/CurrentLoanMaturityDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentLoanMaturityDate__c</fullName>
    <label>Current Loan Maturity Date</label>
    <type>Date</type>
</CustomField>