unpackaged/main/default/objects/Lead/fields/CurrentLoanType__c.field-meta.xml
<CustomField>
    <fullName>CurrentLoanType__c</fullName>
    <label>Current Loan Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>