unpackaged/main/default/objects/Lead/fields/Customer_Story__c.field-meta.xml
<CustomField>
    <fullName>Customer_Story__c</fullName>
    <label>Customer Story</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>