unpackaged/main/default/objects/Lead/fields/CustomerCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CustomerCreditLimit__c</fullName>
    <label>Customer Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>