unpackaged/main/default/objects/Lead/fields/CustomerDateBirth__c.field-meta.xml
<CustomField>
    <fullName>CustomerDateBirth__c</fullName>
    <label>Customer Date Birth</label>
    <type>Date</type>
</CustomField>