unpackaged/main/default/objects/Lead/fields/CustomerEmployer__c.field-meta.xml
<CustomField>
    <fullName>CustomerEmployer__c</fullName>
    <label>Customer Employer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>