unpackaged/main/default/objects/Lead/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <label>Customer ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>