unpackaged/main/default/objects/Lead/fields/CustomerProspect__c.field-meta.xml
<CustomField>
    <fullName>CustomerProspect__c</fullName>
    <label>Customer Prospect</label>
    <length>20</length>
    <type>Text</type>
</CustomField>