unpackaged/main/default/objects/Lead/fields/EmploymentSector__c.field-meta.xml
<CustomField>
    <fullName>EmploymentSector__c</fullName>
    <label>Employment Sector</label>
    <length>20</length>
    <type>Text</type>
</CustomField>