unpackaged/main/default/objects/Lead/fields/Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer__c</fullName>
    <label>Existing Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>