unpackaged/main/default/objects/Lead/fields/Fullname__c.field-meta.xml
<CustomField>
    <fullName>Fullname__c</fullName>
    <formula>Name__c &amp;&quot; &quot;&amp; Surname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fullname</label>
    <type>Text</type>
</CustomField>