unpackaged/main/default/objects/Lead/fields/HasCASAProduct__c.field-meta.xml
<CustomField>
    <fullName>HasCASAProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has CASA Product</label>
    <type>Checkbox</type>
</CustomField>