unpackaged/main/default/objects/Lead/fields/HasInsuranceProduct__c.field-meta.xml
<CustomField>
    <fullName>HasInsuranceProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Insurance Product</label>
    <type>Checkbox</type>
</CustomField>