unpackaged/main/default/objects/Lead/fields/HasLoanProduct__c.field-meta.xml
<CustomField>
    <fullName>HasLoanProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Loan Product</label>
    <type>Checkbox</type>
</CustomField>