unpackaged/main/default/objects/Lead/fields/HasMultipleProducts__c.field-meta.xml
<CustomField>
    <fullName>HasMultipleProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Multiple Products</label>
    <type>Checkbox</type>
</CustomField>