unpackaged/main/default/objects/Lead/fields/How_can_we_assist_you__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_assist_you__c</fullName>
    <label>How can we assist you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current account</fullName>
            </value>
            <value>
                <fullName>Savings account</fullName>
            </value>
            <value>
                <fullName>Fixed deposit account</fullName>
            </value>
            <value>
                <fullName>I have another query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>