unpackaged/main/default/objects/Lead/fields/Intrest_in_which_type_of_facility__c.field-meta.xml
<CustomField>
    <fullName>Intrest_in_which_type_of_facility__c</fullName>
    <label>Intrest in which type of facility?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Term Loan</fullName>
            </value>
            <value>
                <fullName>Revolving Credit</fullName>
            </value>
            <value>
                <fullName>Domestic Asset Finance</fullName>
            </value>
            <value>
                <fullName>Structured Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>