unpackaged/main/default/objects/Lead/fields/LastMonthSalary__c.field-meta.xml
<CustomField>
    <fullName>LastMonthSalary__c</fullName>
    <label>Last Month Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>