unpackaged/main/default/objects/Lead/fields/LastThreeMonthsSalary__c.field-meta.xml
<CustomField>
    <fullName>LastThreeMonthsSalary__c</fullName>
    <label>Last Three Months Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>