unpackaged/main/default/objects/Lead/fields/LeadExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>LeadExpiryDate__c</fullName>
    <label>Lead Expiry Date</label>
    <type>Date</type>
</CustomField>