unpackaged/main/default/objects/Lead/fields/PreviousMonthSalary__c.field-meta.xml
<CustomField>
    <fullName>PreviousMonthSalary__c</fullName>
    <label>Previous Month Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>