unpackaged/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ultimate Account</fullName>
            </value>
            <value>
                <fullName>Ignition Account</fullName>
            </value>
            <value>
                <fullName>Direct Ultimate Account</fullName>
            </value>
            <value>
                <fullName>Premier Ultimate Account</fullName>
            </value>
            <value>
                <fullName>Prestige Ultimate Account</fullName>
            </value>
            <value>
                <fullName>Current Account Treat</fullName>
            </value>
            <value>
                <fullName>Renmogo Current Account</fullName>
            </value>
            <value>
                <fullName>Isago Pay as You Use</fullName>
            </value>
            <value>
                <fullName>Foreign Currency Account</fullName>
            </value>
            <value>
                <fullName>Motshelo Savings Account</fullName>
            </value>
            <value>
                <fullName>FutureU Savings Account</fullName>
            </value>
            <value>
                <fullName>Instant Savings Account</fullName>
            </value>
            <value>
                <fullName>Lekgolo Savings Account</fullName>
            </value>
            <value>
                <fullName>Serala Savings Account</fullName>
            </value>
            <value>
                <fullName>Target Save Account</fullName>
            </value>
            <value>
                <fullName>Fixed Term Deposit</fullName>
            </value>
            <value>
                <fullName>Absa Personal Loan</fullName>
            </value>
            <value>
                <fullName>Scheme Loan</fullName>
            </value>
            <value>
                <fullName>Graduate Loan</fullName>
            </value>
            <value>
                <fullName>Home loan</fullName>
            </value>
            <value>
                <fullName>Platinum Credit Card</fullName>
            </value>
            <value>
                <fullName>Gold Credit Card</fullName>
            </value>
            <value>
                <fullName>Classic Credit Card</fullName>
            </value>
            <value>
                <fullName>Business Current Account</fullName>
            </value>
            <value>
                <fullName>Business Saving  Account</fullName>
            </value>
            <value>
                <fullName>Business Instalment Loan</fullName>
            </value>
            <value>
                <fullName>Business Overdraft</fullName>
            </value>
            <value>
                <fullName>Premier Current Account</fullName>
            </value>
            <value>
                <fullName>Prestige  Account</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>