unpackaged/main/default/objects/Lead/fields/Product_details__c.field-meta.xml
<CustomField>
    <fullName>Product_details__c</fullName>
    <label>Product details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>