unpackaged/main/default/objects/Lead/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Francistown</fullName>
            </value>
            <value>
                <fullName>GIND</fullName>
            </value>
            <value>
                <fullName>Learning and Development Center</fullName>
            </value>
            <value>
                <fullName>Mall</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>Accra East/Tema/Eastern/Volta</fullName>
            </value>
            <value>
                <fullName>Coast Region</fullName>
            </value>
            <value>
                <fullName>Mt.Kenya</fullName>
            </value>
            <value>
                <fullName>Nairobi West</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Prestige and Mall</fullName>
            </value>
            <value>
                <fullName>Queensway Cluster</fullName>
            </value>
            <value>
                <fullName>Tellemarketing</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
            <value>
                <fullName>Mauritius</fullName>
            </value>
            <value>
                <fullName>Bois De Rose</fullName>
            </value>
            <value>
                <fullName>Capital City</fullName>
            </value>
            <value>
                <fullName>La Digue</fullName>
            </value>
            <value>
                <fullName>Praslin</fullName>
            </value>
            <value>
                <fullName>Praslin / La Digue</fullName>
            </value>
            <value>
                <fullName>Providence</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Arusha</fullName>
            </value>
            <value>
                <fullName>Dar es Salaam</fullName>
            </value>
            <value>
                <fullName>Dodoma</fullName>
            </value>
            <value>
                <fullName>Iringa</fullName>
            </value>
            <value>
                <fullName>Mbeya</fullName>
            </value>
            <value>
                <fullName>Morogoro</fullName>
            </value>
            <value>
                <fullName>Moshi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>