unpackaged/main/default/objects/Lead/fields/Select_the_loan_you_would_like_to_apply__c.field-meta.xml
<CustomField>
    <fullName>Select_the_loan_you_would_like_to_apply__c</fullName>
    <label>Select the loan you would like to apply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A new car</fullName>
            </value>
            <value>
                <fullName>A used car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>