unpackaged/main/default/objects/Lead/fields/Source_through_EPL__c.field-meta.xml
<CustomField>
    <fullName>Source_through_EPL__c</fullName>
    <label>Source through EPL?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>