unpackaged/main/default/objects/Lead/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <label>Town</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bobonong</fullName>
            </value>
            <value>
                <fullName>Letlhakane</fullName>
            </value>
            <value>
                <fullName>Mahalapye</fullName>
            </value>
            <value>
                <fullName>Orapa</fullName>
            </value>
            <value>
                <fullName>Palapye</fullName>
            </value>
            <value>
                <fullName>Pilane</fullName>
            </value>
            <value>
                <fullName>Selibe Phikwe</fullName>
            </value>
            <value>
                <fullName>Serowe</fullName>
            </value>
            <value>
                <fullName>Francistown</fullName>
            </value>
            <value>
                <fullName>Gaborone GIND</fullName>
            </value>
            <value>
                <fullName>Telesales</fullName>
            </value>
            <value>
                <fullName>Gaborone Mall</fullName>
            </value>
            <value>
                <fullName>Ghanzi</fullName>
            </value>
            <value>
                <fullName>Gumare</fullName>
            </value>
            <value>
                <fullName>Kasane</fullName>
            </value>
            <value>
                <fullName>Masunga</fullName>
            </value>
            <value>
                <fullName>Maun</fullName>
            </value>
            <value>
                <fullName>Nata</fullName>
            </value>
            <value>
                <fullName>Shakawe</fullName>
            </value>
            <value>
                <fullName>Tutume</fullName>
            </value>
            <value>
                <fullName>Premier Town</fullName>
            </value>
            <value>
                <fullName>Gaborone</fullName>
            </value>
            <value>
                <fullName>Jwaneng</fullName>
            </value>
            <value>
                <fullName>Kanye</fullName>
            </value>
            <value>
                <fullName>Lobatse</fullName>
            </value>
            <value>
                <fullName>Molepolole</fullName>
            </value>
            <value>
                <fullName>Moshupa</fullName>
            </value>
            <value>
                <fullName>Tsabong</fullName>
            </value>
            <value>
                <fullName>Achimota</fullName>
            </value>
            <value>
                <fullName>ho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>