unpackaged/main/default/objects/Lead/fields/Which_account_enquiry_about__c.field-meta.xml
<CustomField>
    <fullName>Which_account_enquiry_about__c</fullName>
    <label>Which account enquiry about?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bonus Savings Account</fullName>
            </value>
            <value>
                <fullName>Instant Savings Account</fullName>
            </value>
            <value>
                <fullName>Target Save</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>