unpackaged/main/default/objects/Lead/fields/Which_credit_card_are_you_interested_in__c.field-meta.xml
<CustomField>
    <fullName>Which_credit_card_are_you_interested_in__c</fullName>
    <label>Which credit card are you interested in?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum Credit Card</fullName>
            </value>
            <value>
                <fullName>Gold Credit Card</fullName>
            </value>
            <value>
                <fullName>Classic Credit Card</fullName>
            </value>
            <value>
                <fullName>Company Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>