unpackaged/main/default/objects/Lead/fields/Which_home_mortgage_to_apply_for__c.field-meta.xml
<CustomField>
    <fullName>Which_home_mortgage_to_apply_for__c</fullName>
    <label>Which home mortgage to apply for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Loan Straight Purchase</fullName>
            </value>
            <value>
                <fullName>Construction Loan</fullName>
            </value>
            <value>
                <fullName>Equity Release</fullName>
            </value>
            <value>
                <fullName>Buy to Let</fullName>
            </value>
            <value>
                <fullName>Re-mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>