unpackaged/main/default/objects/Lead/fields/Which_insurance_would_you_like_to_enquir__c.field-meta.xml
<CustomField>
    <fullName>Which_insurance_would_you_like_to_enquir__c</fullName>
    <label>Which insurance would you like to enquir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lorako Business Insurance</fullName>
            </value>
            <value>
                <fullName>Motor Comprehensive</fullName>
            </value>
            <value>
                <fullName>Homeowners</fullName>
            </value>
            <value>
                <fullName>Household Contents</fullName>
            </value>
            <value>
                <fullName>Kgomotso Funeral Plan</fullName>
            </value>
            <value>
                <fullName>Retrenchment Insurance</fullName>
            </value>
            <value>
                <fullName>Immediate Annuity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>