unpackaged/main/default/objects/Lead/fields/Which_La_Riba_Saving_Account_apply_for__c.field-meta.xml
<CustomField>
    <fullName>Which_La_Riba_Saving_Account_apply_for__c</fullName>
    <label>Which  La Riba Saving Account apply for?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La Riba Al Hadaf Account</fullName>
            </value>
            <value>
                <fullName>La Riba Uwezo Accout</fullName>
            </value>
            <value>
                <fullName>La Riba Junior Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>