unpackaged/main/default/objects/Lead/fields/Which_Personal_Account_to_apply_for__c.field-meta.xml
<CustomField>
    <fullName>Which_Personal_Account_to_apply_for__c</fullName>
    <label>Which Personal Account to apply for?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La Riba Current Account</fullName>
            </value>
            <value>
                <fullName>La Riba Absa Junior</fullName>
            </value>
            <value>
                <fullName>La Riba Premier Account</fullName>
            </value>
            <value>
                <fullName>La Riba Prestige Account</fullName>
            </value>
            <value>
                <fullName>La Riba Mortgage Finance</fullName>
            </value>
            <value>
                <fullName>La Riba Business Finance</fullName>
            </value>
            <value>
                <fullName>La Riba Asset Based Finance</fullName>
            </value>
            <value>
                <fullName>La Riba Construction Finance</fullName>
            </value>
            <value>
                <fullName>Mudhaarabah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>