unpackaged/main/default/objects/Lead/fields/Which_solution_are_you_interested_in__c.field-meta.xml
<CustomField>
    <fullName>Which_solution_are_you_interested_in__c</fullName>
    <label>Which solution are you interested in?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student Account</fullName>
            </value>
            <value>
                <fullName>Ultimate Account</fullName>
            </value>
            <value>
                <fullName>Prestige Account</fullName>
            </value>
            <value>
                <fullName>Absa One Current Account</fullName>
            </value>
            <value>
                <fullName>Premier Banking Account</fullName>
            </value>
            <value>
                <fullName>Target Savings</fullName>
            </value>
            <value>
                <fullName>Zidisha Bonus Account</fullName>
            </value>
            <value>
                <fullName>Junior Account</fullName>
            </value>
            <value>
                <fullName>Foreign Currency Account USD</fullName>
            </value>
            <value>
                <fullName>Fixed Deposit Savings Account</fullName>
            </value>
            <value>
                <fullName>Foreign Currency Savings Account GBP</fullName>
            </value>
            <value>
                <fullName>Unsecured Loan - Non check off</fullName>
            </value>
            <value>
                <fullName>Unsecured Loan - Check off</fullName>
            </value>
            <value>
                <fullName>Signature Credit Card</fullName>
            </value>
            <value>
                <fullName>Platinum Credit Card</fullName>
            </value>
            <value>
                <fullName>Gold Rewards Credit Card</fullName>
            </value>
            <value>
                <fullName>Business Credit Card</fullName>
            </value>
            <value>
                <fullName>Classic Rewards Credit Card</fullName>
            </value>
            <value>
                <fullName>Classic Credit Card</fullName>
            </value>
            <value>
                <fullName>Motor insurance</fullName>
            </value>
            <value>
                <fullName>Education policy</fullName>
            </value>
            <value>
                <fullName>Travel insurance</fullName>
            </value>
            <value>
                <fullName>Home insurance</fullName>
            </value>
            <value>
                <fullName>Medical insurance</fullName>
            </value>
            <value>
                <fullName>Payment card insurance</fullName>
            </value>
            <value>
                <fullName>My life and family</fullName>
            </value>
            <value>
                <fullName>File and special perils insurance</fullName>
            </value>
            <value>
                <fullName>General insurance</fullName>
            </value>
            <value>
                <fullName>Multi-currency Prepaid USD</fullName>
            </value>
            <value>
                <fullName>Multi-currency Prepaid GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>