unpackaged/main/default/objects/Lead/fields/WPBCode__c.field-meta.xml
<CustomField>
    <fullName>WPBCode__c</fullName>
    <label>WPB Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>