unpackaged/main/default/objects/Lead/recordTypes/Test.recordType-meta.xml
<RecordType>
    <fullName>Test</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Test</label>
</RecordType>